--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,9 @@ aux_links:
     - "//github.com/Energyxxer/Conduit"
   "Standard Library on GitHub":
     - "//github.com/Energyxxer/Conduit-Standard-Library"
+
+# Back to top link
+back_to_top: true
+back_to_top_text: "Back to top"
+
+color_scheme: dark
